# bootc-image-builder

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  CANARY.md  Containerfile  Containerfile.odc  Containerfile.orig  HACKING.md  Makefile  README-osbuildbootc.md  README.md  README.md.osbuild-deploy-container  bootc-image-builder.sh  build.sh  entrypoint.sh  go.mod  go.sum  group_osbuild-osbuild-fedora.repo  michaelvogt-qemu-fix-bib-207-fedora-39.repo  package-requires.txt  prepare.sh  pyproject.toml  pytest.ini
.github/: CODEOWNERS  dependabot.yml  pull.yml
.tekton/: bootc-image-builder-c9s-pull-request.yaml  bootc-image-builder-c9s-push.yaml  bootc-image-builder-integration-tests.yaml  bootc-image-builder-pull-request.yaml  bootc-image-builder-push.yaml  testing-farm.yaml
bib/: go.mod  go.sum
cmd/: bootc2disk.go  osbuildbootc.go
devel/: Containerfile  Containerfile.hack  README.md  Troubleshooting.md  bootc-install
odc/: go.mod  go.sum
plans/: all.fmf  integration.fmf  unit-go.fmf
src/: cmdlib.sh  create_disk.sh  deps.txt  installdeps.sh  qcow2.sh  supermin-init-prelude.sh  vmdeps.txt  vmshell.sh
test/: README.md  conftest.py  containerbuild.py  execution-environment.yml  requirements.txt  test_adduser.py  test_build.py  test_build_cross.py  test_build_disk.py  test_build_iso.py  test_flake8.py  test_lorax_template.py  test_manifest.py  test_opts.py  test_progress.py  test_pylint.py  test_smoke.py  testcases.py  testutil.py  testutil_test.py  vm.py
tools/: gen-manifests
vmtest/: util.py  util_test.py  vm.py
(+98 files in other folders)
